# AIZO-project-2

./: .gitignore  Algorythms.h  CMakeLists.txt  GUI.h  Graphs.h  Utilities.h  main.cpp
Algorythms/: MST.h  MaxFlowAlgorithm.h  ShortestPathAlgorithms.h
DataStructures/: DisjointSet.h  MinHeap.h  SortedEdgeList.h
